# SLAU_4sem

./: CMakeLists.txt  kr2.cpp  main.cpp  solvers_data.cpp
KR_1/: 1.txt  f2.txt  hello.txt  main.py
KR_2/: 1.txt  2.txt  2main.py  3.txt  4.txt  lam.txt  main.py  n3.txt  readme  time.txt  x_y1.txt  x_y2.txt  x_y3.txt  x_y4.txt  x_y5.txt
pass_method_lib/: CMakeLists.txt  pass_method_lib.h
pass_method_lib_test/: CMakeLists.txt  pass_method_lib_test.cc
src/: CMakeLists.txt  CSR_matrix.h  CSR_solver.h  DNC_matrix.h  Housholder.h  SOR_and_SSOR.h  Vector.h  bundeled_gradients.h  gradient_fall.h  pass_method_lib.h
tests/: CMakeLists.txt  CSR_matrix_test.cpp  CSR_paresers_testing.cpp  DNC_matrix_test.cpp  housholder_test.cpp  pass_method_lib_test.cpp
work_1/: f1.txt  f3.txt  main.py  n1.txt
